--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -3,7 +3,8 @@
 body{
 	font-family: Helvetica , sans-serif;
 	font-weight: regular;
-position: relative;
+    position: relative;
+    width: 100%;
 }
 
 
@@ -16,7 +17,8 @@ header{
 	width: 100%;
 	display: flex;
 	justify-content: space-between;
-	
+	height: 64px;
+	z-index: 1;
 } 
 
 .logo{
@@ -27,10 +29,11 @@ header{
 nav a{
 	text-decoration: none;
 	margin:64px 16px;
+	color: black;
 }
 
 .title-2{
-color: grey;
+color: lightgray;
 opacity: 0.5;
 }
 
@@ -39,39 +42,11 @@ nav{
 
 }
 
+
+
 /* Banner Section */
 
 .banner-section{
-	
-	display: inline-flex;
-	background-color: grey;
-	align-items: center;
-	
-}
-.banner-image{
-padding: 32px 24px;
-
-}
-
-.banner-image img{
-	width: 100%;
-}
-
-.button {
-	text-decoration: none;
-	color: white;
-	border: solid;
-	padding:8px 0;
-	background-color: black;
-	border-color: black;
-}
-
-.banner-content{
-display: inline-block;
-width: 60%;
-float: center;
-padding: 64px 24px;
-text-align: justify;
-float: right;
-
+	z-index: 2;
+	background-color: gray;
 }
