--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -4,7 +4,11 @@ body{
 	font-family: Helvetica , sans-serif;
 	font-weight: regular;
     position: relative;
-    width: 100%;
+    
+}
+
+a{
+	text-decoration: none;
 }
 
 
@@ -14,7 +18,7 @@ body{
 
 /* Header */
 header{
-	width: 100%;
+
 	display: flex;
 	justify-content: space-between;
 	height: 64px;
@@ -34,7 +38,7 @@ nav a{
 
 .title-2{
 color: lightgray;
-opacity: 0.5;
+opacity: 0.8;
 }
 
 nav{
@@ -47,6 +51,33 @@ nav{
 /* Banner Section */
 
 .banner-section{
-	z-index: 2;
-	background-color: gray;
+    background-color: lightgray;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
 }
+.banner-section img{
+    max-width: 60%;
+    margin: 32px 24px;
+}
+.banner-content{
+    display: inline-flex;
+    flex-direction: column;
+    width: 40%;
+    margin: 24px 0;
+}
+
+.button {
+    color: white;
+    background: #444444;
+    padding: 8px;
+    margin-bottom: 40px;
+    text-align: center;
+    font-weight: 400;
+    margin-bottom: 32px;
+    font-size: 1.5rem;
+    
+}
+
+
+
