--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -15,6 +15,11 @@ a{
     color: unset;
 }
 
+h3{
+    font-weight: 900;
+    font-size:30px;
+}
+
 
 /* Header & Nav */
 
@@ -74,9 +79,9 @@ nav ul li {
     margin-left: 24px;
     margin-bottom: 36px;
 
-}
+}1
 
-.banner-content h2{
+.banner-content h3{
     font-size: 55px;
     line-height: 1.2;
 }
@@ -102,15 +107,46 @@ nav ul li {
  .information{
     display: flex;
     padding: 32px 24px;
+    align-items: start;
 }
-
-.information-article-main{
-    outline: 1px solid red;
+ .primary{
     width: 60%;
+
 }
 
+.primary h3{
+margin-bottom: 24px;
+}
+
+ 
+.primary img{
+    width: 100%;
+     }
 
 
+.secondary {
+    width: 40%;
+    margin-left: 24px;
+    display: inline-flex;
+    flex-direction: column;
+    height: auto;
+ }
+
+
+ .secondary .information-article{
+   outline: 1px solid red;
+ }
+
+ .secondary .information-article h3,p{
+    width: 65%;
+    display: inline;
+ }
+
+.secondary .information-article img{
+    width: 35%;
+    height: auto;
+    padding: 16px;
+}
 
 
 
